--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -19,10 +19,13 @@ jobs:
           base: header, activity, community, repositories, metadata
           config_timezone: Europe/Berlin
           plugin_habits: yes
-          plugin_habits_days: 30
+          plugin_habits_days: 90
           plugin_habits_facts: yes
           plugin_habits_from: 200
+          plugin_habits_charts: yes
+          plugin_habits_trim: yes
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
           plugin_lines: yes
+          config_timezone: Europe/Berlin
           repositories_affiliations: owner, organization_member, collaborator
